--- a/visualization/index.html
+++ b/visualization/index.html
@@ -81,6 +81,10 @@
 								Route:
 								<input type="text" id="route-input" value="2" />
 							</form>
+							<form method="get">
+								Zoom:
+								<input type="text" id="zoom-input" value="12.5" onkeydown="zoomIn()" />
+							</form>
 
 							<button id="start-btn" type="button" class="btn btn-primary btn">Start</button>
 
