Visualization of average buffer, maximum buffer, and PR optimal's miss risk

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -110,6 +110,10 @@
 								Route:
 								<input type="text" id="route-pr-input" value="2" />
 							</form>
+							<form method="get">
+								Variable:
+								<input type="text" id="variable-pr-input" value="miss_risk" />
+							</form>
 							<!-- <form method="get">
 								<h4 id="status">Preparing.</h4>
 							</form> -->
