--- a/visualization/index.html
+++ b/visualization/index.html
@@ -16,6 +16,7 @@
 	<!-- Load Leaflet from -->
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" />
 	<script src="./js/leaflet.js"></script>
+	<script src="./js/leaflet-export.js"></script>
 	<!-- Load Esri Leaflet -->
 	<script src="./js/esri-leaflet.js"></script>
 	<!-- Load jquery -->
@@ -25,7 +26,8 @@
 	<script src="./js/bootstrap.min.js"></script>
 
 	<script src="./js/leaflet.browser.print.min.js"></script>
-
+	<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+	
 
 	<!-- Load css-->
 	<link rel="stylesheet" href="./css/leaflet.awesome-markers.css">
@@ -122,7 +124,7 @@
 							</form> -->
 
 							<button id="start-3-btn" type="button" class="btn btn-primary btn">Start</button>
-							<!-- <button id="snap-btn" type="button" class="btn btn-primary btn">Snap</button> -->
+							<button id="snap-btn" type="button" class="btn btn-primary btn">Snap</button>
 							<!-- <button id="down-btn" type="button" class="btn btn-primary btn">Download</button> -->
 						</div>
 					</div>
